--- a/opt/sim.cfg
+++ b/opt/sim.cfg
@@ -5,8 +5,8 @@
 #	'rand'	: sets no seed (random)
 # seed = 42
 seed = rand
-capacity = 2
-simulation_duration = 400
+capacity = 1
+simulation_duration = 10000
 avg_interarrival_time = 5
 service_time = 7
 
@@ -14,7 +14,7 @@ service_time = 7
 # Patience 	= 0 --> drop queue
 # 			> 0 --> Process enqueue in Resource and drop after generated Value
 #			max --> never drop out
-avg_patience = max
+avg_patience = 3
 # generator selection:
 #	0: expovariate
 #	1: randint
@@ -22,13 +22,13 @@ avg_patience = max
 # ... more to come
 interarrival_gen = 0
 service_time_gen = 0
-patience_gen = 0
+patience_gen = 2
 
 # Be careful not to alter to many parameters at once...
 # TODO: These advanced settings need to be implemented.
 # !!! if possible, please use positive values !!!
 [advanced]
-number_of_repetitions = 2
+number_of_repetitions = 10
 alter_default_seed_by = 1
 alter_interarrival_time_by = 0
 alter_capacity_by = 0
