Added feature to run multiple simulations, alter capacity and repeat x-times for each simulation.

--- a/opt/sim.cfg
+++ b/opt/sim.cfg
@@ -6,30 +6,33 @@
 # seed = 42
 seed = rand
 capacity = 1
-simulation_duration = 10000
-avg_interarrival_time = 5
-service_time = 7
+simulation_duration = 1000
+avg_interarrival_time = 10
+service_time = 5
 
 # This sets the Patience of the Process
 # Patience 	= 0 --> drop queue
 # 			> 0 --> Process enqueue in Resource and drop after generated Value
 #			max --> never drop out
-avg_patience = 3
+avg_patience = 7
 # generator selection:
 #	0: expovariate
 #	1: randint
 #	2: constant value
 # ... more to come
 interarrival_gen = 0
-service_time_gen = 0
-patience_gen = 2
+service_time_gen = 1
+patience_gen = 0
 
 # Be careful not to alter to many parameters at once...
 # TODO: These advanced settings need to be implemented.
-# !!! if possible, please use positive values !!!
+# !!! positive values required!
+# 				 number_of_simulations 	=> e.g. 3 different experiments with different capacities, starting with predefined "capacity" (see above)
+# number_of_repetitions_per_simulation 	=> e.g. 10 runs for each experiment
 [advanced]
-number_of_repetitions = 10
-alter_default_seed_by = 1
+number_of_simulations = 4
+number_of_repetitions_per_simulation = 15
+alter_default_seed_by = 0
 alter_interarrival_time_by = 0
 alter_capacity_by = 0
 
