Added plotting capabilities.
- Creates subplots as configured in '''sim.cfg'''.
- Additional generators added.

--- a/opt/sim.cfg
+++ b/opt/sim.cfg
@@ -6,23 +6,26 @@
 # seed = 42
 seed = rand
 capacity = 1
-simulation_duration = 1000
-avg_interarrival_time = 10
-service_time = 9
+simulation_duration = 60
+avg_interarrival_time = 3
+service_time = 7
 
 # This sets the Patience of the Process
 # Patience 	= 0 --> drop queue
 # 			> 0 --> Process enqueue in Resource and drop after generated Value
 #			max --> never drop out
-avg_patience = 7
+avg_patience = 3
 # generator selection:
 #	0: expovariate
 #	1: randint
-#	2: constant value
-# ... more to come
+#	2: uniform
+#	3: normalvariate (avg_interarrival, sigma = 1)
+#	4: normalvariate (avg_interarrival, sigma = 1.5)
+#	5: normalvariate (avg_interarrival, sigma = 0.5)
+#	6: constant value
 interarrival_gen = 0
-service_time_gen = 1
-patience_gen = 0
+service_time_gen = 5
+patience_gen = 2
 
 # Be careful not to alter to many parameters at once...
 # TODO: These advanced settings need to be implemented.
@@ -30,10 +33,10 @@ patience_gen = 0
 # 				 number_of_simulations 	=> e.g. 3 different experiments with different capacities, starting with predefined "capacity" (see above)
 # number_of_repetitions_per_simulation 	=> e.g. 10 runs for each experiment
 [advanced]
-number_of_simulations = 2
-number_of_repetitions_per_simulation = 2
+number_of_simulations = 5
+number_of_repetitions_per_simulation = 1
 alter_default_seed_by = 0
 alter_interarrival_time_by = 0
-alter_capacity_by = 0
+alter_capacity_by = 1
 
 
