Refactored Code. Implemented Class for Simulation. Logging to csv file in Folder logs.
Clear and more readable main. Class for simulated source/process system.
Logging to csv-Files added.
Evaluation and plotting of data temporarily removed.

--- a/opt/sim.cfg
+++ b/opt/sim.cfg
@@ -1,20 +1,28 @@
 [default]
-# seedval:
 # set value without quotation marks, e.g. rand, 1, 42, ...
 #	'int' 	: sets seed to int
 #	'rand'	: sets no seed (random)
-# seed = 42
+# e.g. seed = 42
 seed = rand
+
+# Initial capacity of queue
 capacity = 1
+
+# Amount of time units (tu) for each run
 simulation_duration = 100
-avg_interarrival_time = 3
+
+# Average Interarrival
+avg_interarrival_time = 15
+
+# Average Service Time
 service_time = 7
 
 # This sets the Patience of the Process
 # Patience 	= 0 --> drop queue
 # 			> 0 --> Process enqueue in Resource and drop after generated Value
 #			max --> never drop out
-avg_patience = 0
+avg_patience = 3
+
 # generator selection:
 #	0: expovariate
 #	1: randint
@@ -23,20 +31,31 @@ avg_patience = 0
 #	4: normalvariate (avg_interarrival, sigma = 1.5)
 #	5: normalvariate (avg_interarrival, sigma = 0.5)
 #	6: constant value
-interarrival_gen = 0
-service_time_gen = 3
-patience_gen = 2
 
+# Generator for Interarrival Times
+interarrival_gen = 0
+
+# Generator for Service Times
+service_time_gen = 2
+
+# Generator for amount of Patience
+patience_gen = 0
+
+[advanced]
 # Be careful not to alter to many parameters at once...
 # TODO: These advanced settings need to be implemented.
 # !!! positive values required!
-# 				 number_of_simulations 	=> e.g. 3 different experiments with different capacities, starting with predefined "capacity" (see above)
-# number_of_repetitions_per_simulation 	=> e.g. 10 runs for each experiment
-[advanced]
-number_of_simulations = 3
-number_of_repetitions_per_simulation = 3
-alter_default_seed_by = 0
+#
+# number_of_simulations  => e.g. 3 different experiments with different capacities, starting with predefined "capacity" (see above)
+number_of_simulations = 2
+
+# number_of_repetitions_per_simulation  => e.g. 10 runs for each experiment
+number_of_repetitions_per_simulation = 5
+
+# Change '''Interarrival Rate''' by '''value''' (0 < value)
 alter_interarrival_time_by = 0
-alter_capacity_by = 2
+
+# Change '''queue capacity''' by '''value''' (0 < value)
+alter_capacity_by = 1
 
 
