Worked on plotting the graphs including drop rate in title.

--- a/opt/sim.cfg
+++ b/opt/sim.cfg
@@ -9,34 +9,32 @@ seed = rand
 capacity = 1
 
 # Amount of time units (tu) for each run
-simulation_duration = 100
+simulation_duration = 500
 
 # Average Interarrival
-avg_interarrival_time = 15
+avg_interarrival_time = 3
 
 # Average Service Time
 service_time = 7
 
 # This sets the Patience of the Process
-# Patience 	= 0 --> drop queue
-# 			> 0 --> Process enqueue in Resource and drop after generated Value
-#			max --> never drop out
-avg_patience = 3
+# Patience 	 = 0 --> drop queue
+# 			     > 0 --> Process enqueue in Resource and drop after generated Value
+#	       		 max --> never drop out
+avg_patience = 0
 
 # generator selection:
-#	0: expovariate
-#	1: randint
-#	2: uniform
-#	3: normalvariate (avg_interarrival, sigma = 1)
-#	4: normalvariate (avg_interarrival, sigma = 1.5)
-#	5: normalvariate (avg_interarrival, sigma = 0.5)
-#	6: constant value
-
+#	0: expovariate (1/avg_interarrival_time)
+#	1: randint (a,avg_interarrival_time)
+#	2: uniform (a,avg_interarrival_time)
+#	3: normalvariate (avg_interarrival_time, sigma)
+#	4: constant value
+# configure sigma or a in the file: """ opt/generator.csv """
 # Generator for Interarrival Times
 interarrival_gen = 0
 
 # Generator for Service Times
-service_time_gen = 2
+service_time_gen = 1
 
 # Generator for amount of Patience
 patience_gen = 0
@@ -47,10 +45,10 @@ patience_gen = 0
 # !!! positive values required!
 #
 # number_of_simulations  => e.g. 3 different experiments with different capacities, starting with predefined "capacity" (see above)
-number_of_simulations = 2
+number_of_simulations = 5
 
 # number_of_repetitions_per_simulation  => e.g. 10 runs for each experiment
-number_of_repetitions_per_simulation = 5
+number_of_repetitions_per_simulation = 1
 
 # Change '''Interarrival Rate''' by '''value''' (0 < value)
 alter_interarrival_time_by = 0
