Final code changes. Hopefully nothing more until final presentation held.

--- a/opt/sim.cfg
+++ b/opt/sim.cfg
@@ -9,19 +9,19 @@ seed = rand
 capacity = 1
 
 # Amount of time units (tu) for each run
-simulation_duration = 100000
+simulation_duration = 1500
 
 # Average Interarrival
-avg_interarrival_time = 5
+avg_interarrival_time = 10
 
 # Average Service Time
-service_time = 3
+service_time = 10
 
 # This sets the Patience of the Process
 # Patience 	 = 0 --> drop queue
 # 			     > 0 --> Process enqueue in Resource and drop after generated Value
 #	       		 max --> never drop out
-avg_patience = 0
+avg_patience = max
 
 # generator selection:
 #	0: expovariate (1/avg_interarrival_time)
@@ -34,10 +34,10 @@ avg_patience = 0
 interarrival_gen = 0
 
 # Generator for Service Times
-service_time_gen = 0
+service_time_gen = 1
 
 # Generator for amount of Patience
-patience_gen = 0
+patience_gen = 4
 
 [advanced]
 # Be careful not to alter to many parameters at once...
@@ -47,12 +47,38 @@ patience_gen = 0
 # number_of_simulations  => e.g. 3 different experiments with different capacities, starting with predefined "capacity" (see above)
 number_of_simulations = 5
 # number_of_repetitions_per_simulation  => e.g. 10 runs for each experiment
-number_of_repetitions_per_simulation = 3
+number_of_repetitions_per_simulation = 10
 
-# Change '''Interarrival Rate''' by '''value''' (0 < value)
+# TODO Change '''Interarrival Rate''' by '''value''' (0 < value)
 alter_interarrival_time_by = 0
 
 # Change '''queue capacity''' by '''value''' (0 < value)
 alter_capacity_by = 1
+
+# EXAMPLES
+# > M / D / 1 Queue:
+# --> interarrival_gen = 0
+# --> service_time_gen = 4
+# --> avg_patience = max
+# --> capacity = 1 and alter_capacity_by = 0
+
+# > M / D / n Queue:
+# --> interarrival_gen = 0
+# --> service_time_gen = 4
+# --> avg_patience = max
+# --> capacity = n and alter_capacity_by = 0
+
+# > M / M / 1-n Queue:
+# --> interarrival_gen = 0
+# --> service_time_gen = 0
+# --> avg_patience = max
+# --> capacity = 1 and alter_capacity_by = 1
+
+# > M / M / 1 Queue with growing interarrival time:
+# --> interarrival_gen = 0
+# --> service_time_gen = 0
+# --> avg_patience = max
+# --> capacity = 1 and alter_capacity_by = 0 and alter_interarrival_time_by = 1
+
 
 
