--- a/opt/sim.cfg
+++ b/opt/sim.cfg
@@ -11,7 +11,7 @@ capacity = 1
 # Amount of time units (tu) for each run
 simulation_duration = 1500
 
-# Average Interarrival
+# Average Interarrival (in average every x tu a process spawns)
 avg_interarrival_time = 10
 
 # Average Service Time
@@ -56,6 +56,12 @@ alter_interarrival_time_by = 0
 alter_capacity_by = 1
 
 # EXAMPLES
+# > M / GI / 1 Queue:
+# --> interarrival_gen = 0
+# --> service_time_gen = [1-3]
+# --> avg_patience = max
+# --> capacity = 1 and alter_capacity_by = 0
+
 # > M / D / 1 Queue:
 # --> interarrival_gen = 0
 # --> service_time_gen = 4
