Added time measurements for simulation time and whole run including plotting.

--- a/opt/sim.cfg
+++ b/opt/sim.cfg
@@ -41,7 +41,6 @@ patience_gen = 4
 
 [advanced]
 # Be careful not to alter to many parameters at once...
-# TODO: These advanced settings need to be implemented.
 # !!! positive values required!
 #
 # number_of_simulations  => e.g. 3 different experiments with different capacities, starting with predefined "capacity" (see above)
@@ -49,7 +48,7 @@ number_of_simulations = 5
 # number_of_repetitions_per_simulation  => e.g. 10 runs for each experiment
 number_of_repetitions_per_simulation = 10
 
-# TODO Change '''Interarrival Rate''' by '''value''' (0 < value)
+# Change '''Interarrival Rate''' by '''value''' (0 < value)
 alter_interarrival_time_by = 0
 
 # Change '''queue capacity''' by '''value''' (0 < value)
